# ClaudeF5WALoader

./: .gitignore  AGENTS.md  CLAUDE.md  DEVLOG.md  PROGRESS.md  README.md  WALoaderInitialWriteup.txt  pyproject.toml
.claude/: launch.json
authoring_kit/: 01-building-waloader-apps.md  02-previews.md  03-help-and-faq.md  README.md  SYSTEM_PROMPT.md
config/: deploy.example.toml  waloader.example.toml
docs/: backups-and-restore.md  caddy-reverse-proxy.md  configuration.md  dataset-concepts-contract.md  dependency-policy.md  deploying-updates.md  llm-bundle-prompt.md  manual-smoke-checklist.md  markdown-bundle-contract.md  process-management.md  troubleshooting.md  user-management.md
examples/: sample-bundle.md
goals/: G01-waloader-complete.md  G02-backups-reset-migration.md
tests/: conftest.py  test_app_migration.py  test_app_users.py  test_authoring_kit.py  test_background.py  test_backups_deletion.py  test_bootstrap.py  test_bundles.py  test_caddy.py  test_cli.py  test_config.py  test_datasets.py  test_db_migrations.py  test_dependency_policy.py  test_deploy.py  test_deployment.py  test_e2e.py  test_e2e_caddy.py  test_e2e_g02.py  test_factory_reset.py  test_health_notifications.py  test_lifecycle_reconciliation.py  test_paths.py  test_ports.py  test_processes.py  test_repositories.py  test_restore_rebuild.py  test_scoped_backups.py  test_security_users.py  test_slugs.py  test_states.py  test_ui.py  test_ui_admin.py  test_ui_backups.py  test_ui_create.py  test_ui_dashboard.py  test_ui_datasets_users.py  test_uv_env_preflight.py  test_versioning.py
(+82 files in other folders)
