[project]
name = "waloader"
version = "0.1.0"
description = "Streamlit platform that deploys and manages LLM-generated finance Streamlit apps"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.37",
    "pandas>=2.0",
    "duckdb>=1.0",
    "plotly>=5.20",
    "pyarrow>=16.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pydantic>=2.7",
    "psutil>=5.9",
    "rich>=13.7",
    "argon2-cffi>=23.1",
    "packaging>=24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "xlwt>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waloader", "src/waloader_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run is the offline unit suite; marked suites are opt-in via `-m <marker>`.
addopts = "-m 'not integration and not e2e and not caddy'"
markers = [
    "integration: needs uv and network access (real dependency resolution)",
    "e2e: full real deployment round-trip (uv, network, streamlit child process)",
    "caddy: needs a Caddy binary on this machine",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
